# reflekt-registry

./: .envrc  Makefile  NOTES.md  README.md  TODO.md  proxy_segment.py  pyproject.toml  test.json  test_json.py
reflekt-registry/: Makefile  app.py  requirements.txt
reflekt-registry/.chalice/: config.json
reflekt-registry/.chalice/deployed/: dev.json
reflekt-registry/chalicelib/: db.py  errors.py  s3_registry.py  validator.py
reflekt-registry/tests/: test_app.py
registry/: Makefile  app.py  requirements.txt  sam.json
registry/.chalice/: config.json
registry/.chalice/deployed/: dev.json
